--- a/AgniMessenger/.classpath
+++ b/AgniMessenger/.classpath
@@ -3,5 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/media/enoch/C47ABD537ABD434A/School/CPSC441/AgniMessenger/AgniMessenger/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/media/enoch/C47ABD537ABD434A/School/CPSC441/AgniMessenger/AgniMessenger/lib/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="/media/enoch/C47ABD537ABD434A/School/CPSC441/AgniMessenger/AgniMessenger/lib/jmock-junit4-2.6.0.jar"/>
+	<classpathentry kind="lib" path="/media/enoch/C47ABD537ABD434A/School/SENG437/2/seng437-assignment2/lib/old/jMock/jmock-2.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
